--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </tr>
       <tr>
         <td>2018</td>
-        <td>House Caption Blue House</td>
+        <td>House Captain Blue House</td>
       </tr>
     </tbody>
   </table>
